--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
  <circle cx="20" cy="20" r="15" stroke="blue" stroke-width="1" fill="blue"></circle></svg>
             <nav id ="nav" class="nav">
 							<ul>
-                                <li class="nav__item nav__item--hover" > <a href="about.html" >About </a></li>
+                                <li class="nav__item nav__item--hover" > <a href="" >About </a></li>
                                 
-                                <li class="nav__item nav__item--hover" > <a href="cv.html" >CV</a></li>
+                                <li class="nav__item nav__item--hover" > <a href="" >CV</a></li>
 								
-																 <li class="nav__item nav__item--hover" > <a href="contact.php" >Contact</a></li>
+<li class="nav__item nav__item--hover" > <a href="" >Contact</a></li>
 																</ul>
                                  </nav>
 
