--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
  <circle cx="20" cy="20" r="15" stroke="blue" stroke-width="1" fill="blue"></circle></svg>
             <nav id ="nav" class="nav">
 							<ul>
-                                <li class="nav__item nav__item--hover" > <a href="about.html" >About </a></li>
+                                <li class="nav__item nav__item--hover" > <a href="" >About </a></li>
                                 
-                                <li class="nav__item nav__item--hover" > <a href="cv.html" >CV</a></li>
+                                <li class="nav__item nav__item--hover" > <a href="" >CV</a></li>
 								
-																 <li class="nav__item nav__item--hover" > <a href="contact.php" >Contact</a></li>
+																 <li class="nav__item nav__item--hover" > <a href="" >Contact</a></li>
 																</ul>
                                  </nav>
 
@@ -49,7 +49,7 @@
 		<h3 class="table__heading">Industry Thoughts </h3>
  </div>
 <div class ="span">
- <p class="span__para span__para--hover"><a href="blog1.html">My Perspective </a></p> 
+ <p class="span__para span__para--hover"><a href="">My Perspective </a></p> 
 </div>
 
  </div>
@@ -59,7 +59,7 @@
 		<h3 class="table__heading">Design Process </h3>
  </div>
  <div class ="span">
- <p class="span__para span__para--hover"><a href="blog2.html"> Explanation of my development process.</a> </p>
+ <p class="span__para span__para--hover"><a href=""> Explanation of my development process.</a> </p>
 
 </div>
  </div>
@@ -70,7 +70,7 @@
  </div>
  <div class ="span">
 
- <p class="span__para span__para--hover"> <a href="blog3.html">Discussion of my SEO integration and site optimization </a></p>
+ <p class="span__para span__para--hover"> <a href="">Discussion of my SEO integration and site optimization </a></p>
 
 </div>
 
@@ -87,8 +87,8 @@
  </div>
  <div class ="span">
 
- <p class="span__para span__para--hover"> <a href="https://github.com/themat7/Basic-projects-collection/blob/master/bubble%20sort/bubblesort2.html">  simple binary converter </a></p>
-<p class="span__para span__para--hover"> <a href ="http://www.16027044.webdevmmu.uk/bubblesort.html"> bubble sort </a></p>
+ <p class="span__para span__para--hover"> <a href="">  simple binary converter </a></p>
+<p class="span__para span__para--hover"> <a href =""> bubble sort </a></p>
 
 </div>
 
@@ -154,6 +154,7 @@
 </script>
 
   
-
+ 
+    </script>
   
 </html>
